# Y360_Scripts

./: .flake8  .gitignore  README.md  Y360_scripts_workflow.yml  not-setup.py  pyproject.toml  requirements.txt
.github/workflows/: Y360_scripts_workflow.yml
Y360_Scripts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
results/: .md
scripts/: Y360_allusers.py  Y360_groups.py  Y360_rules.py  __init__.py  __main__.py  constants.py  groups.py  rules.py  users.py  utils.py
